--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </main>
   <hr>
   <footer class="footer">
-    <img src="img/BALLERINi.svg" alt="logo ballerini" class="img-footer">
+    <img src="img/BALLERINI.svg" alt="logo ballerini" class="img-footer">
   </footer>
 </body>
 </html>
